--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-server.port=8080
+# PostgreSQL-Datenbank-Konfiguration
+spring.datasource.url=jdbc:postgresql://localhost:5432/cinefy-db
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.datasource.url=jdbc:sqlite:cinefy.db
-spring.datasource.driver-class-name=org.sqlite.JDBC
-spring.sql.init.mode=always
-spring.sql.init.encoding=UTF-8
-
-spring.datasource.hikari.auto-commit=true
+# JPA/Hibernate-Konfiguration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
