Revert "Create cinema reservation entities and configure schema initialization"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,5 @@ spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate-Konfiguration
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
-
-# Ausführung der schema.sql beim Start sicherstellen
-spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:schema.sql
